[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viroconstrictor-data"
dynamic = ["version"]
description = "Data and presets for the Viroconstrictor package"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0"
authors = [
    { name = "Florian Zwagemaker" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.hatch.version]
path = "viroconstrictor_data/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["viroconstrictor_data"]
include = [
    "/viroconstrictor_data/**/*.json",
]




